# litestar-queues

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  e2e-examples.yml  pr-title.yml  publish.yml  test.yml
benchmarks/baselines/: README.md
docs/: Makefile  conf.py  index.rst
docs/_static/: custom.css  style.css  versioning.js  versions.json
docs/contributing/: documentation.rst  index.rst  testing.rst
docs/examples/: index.rst
docs/getting_started/: index.rst  installation.rst  introduction.rst  quickstart.rst
docs/reference/: api.rst  backends.rst  core.rst  events.rst  execution.rst  index.rst
docs/usage/: backends.rst  background-tasks.rst  cli.rst  concepts.rst  configuration.rst  dependency-resolver.rst  event-history.rst  event-streams.rst  event-testing.rst  events.rst  failures-and-cancellation.rst  index.rst  maintenance.rst  migration.rst  observability.rst  quickstart.rst  results.rst  schedules.rst  task-options.rst  tasks.rst  testing.rst  worker-recovery.rst  worker-wakeups.rst  workers.rst
docs/usage/backends/: advanced-alchemy.rst  redis-valkey.rst  sqlspec.rst
docs/usage/deployment/: cloud-run.rst
examples/: README.md  __init__.py  htmx_realtime_common.py
examples/htmx_realtime/: README.md  __init__.py  app.py  package.json
examples/htmx_realtime_advanced_alchemy/: README.md  app.py  package.json
examples/htmx_realtime_advanced_alchemy/templates/: index.html
examples/htmx_realtime_redis/: README.md  app.py  package.json  vite.config.ts
examples/htmx_realtime_redis/resources/: main.ts
examples/htmx_realtime_sqlspec/: README.md  app.py  package.json
examples/htmx_realtime_sse/: README.md  app.py  package.json
examples/htmx_realtime_sse/resources/: main.ts  styles.css  vite-env.d.ts
examples/htmx_realtime_sse/templates/: base.html  index.html
examples/htmx_realtime_sse_advanced_alchemy/: README.md  app.py  package.json
examples/htmx_realtime_sse_advanced_alchemy/resources/: main.ts  styles.css
examples/htmx_realtime_sse_advanced_alchemy/templates/: index.html
examples/htmx_realtime_sse_redis/: README.md  app.py  package.json
examples/htmx_realtime_sse_redis/scripts/: __init__.py
examples/htmx_realtime_sse_sqlspec/: README.md  app.py  package.json
examples/htmx_realtime_sse_sqlspec/resources/: main.ts
examples/htmx_realtime_sse_sqlspec/scripts/: external_publisher.py
examples/htmx_realtime_sse_valkey/: README.md  app.py  package.json
examples/htmx_realtime_sse_valkey/resources/: main.ts
examples/htmx_realtime_sse_valkey/scripts/: external_publisher.py
examples/htmx_realtime_valkey/: README.md  app.py  package.json
examples/htmx_realtime_valkey/resources/: styles.css
examples/htmx_realtime_websocket/: README.md  app.py  package.json
examples/htmx_realtime_websocket/resources/: main.ts  styles.css
examples/htmx_realtime_websocket/templates/: index.html
examples/htmx_realtime_websocket_advanced_alchemy/: README.md  app.py  package.json
examples/htmx_realtime_websocket_advanced_alchemy/resources/: styles.css
examples/htmx_realtime_websocket_redis/: README.md  app.py  package.json
examples/htmx_realtime_websocket_redis/resources/: main.ts
examples/htmx_realtime_websocket_sqlspec/: README.md  app.py  package.json
examples/htmx_realtime_websocket_sqlspec/resources/: main.ts
examples/htmx_realtime_websocket_sqlspec/templates/: index.html
examples/htmx_realtime_websocket_valkey/: README.md  app.py  package.json
examples/htmx_realtime_websocket_valkey/resources/: main.ts
src/litestar_queues/: __init__.py  _cli.py  _consumer.py  _heartbeat.py  _identity.py  _typing.py  background.py  config.py  consumer.py  exceptions.py  heartbeat.py  maintenance.py  models.py  observability.py  plugin.py  service.py  task.py  typing.py  worker.py
src/litestar_queues/backends/: __init__.py  _notification_wait.py  _redis_like.py  base.py  factory.py  memory.py  sqlspec.py
src/litestar_queues/events/: __init__.py  _log_records.py  _typing.py  buffer.py  channels.py  chunking.py  config.py  context.py  history.py  litestar.py  log.py  models.py  producer.py  publisher.py  sinks.py  sqlite.py  sqlspec.py  stream_config.py  streaming.py
src/litestar_queues/execution/: __init__.py  base.py  dispatch.py  envelope.py  factory.py  immediate.py  local.py
src/tests/: conftest.py  test_advanced_alchemy_backend.py  test_cloudrun_execution.py  test_downstream_migration.py  test_litestar_event_streams.py  test_memory_backend.py  test_plugin.py  test_plugin_lifecycle.py  test_public_api.py  test_queue_contract.py  test_queue_events.py  test_redis_valkey_backend.py  test_service.py  test_sqlspec_backend.py  test_task_api.py  test_worker.py  test_worker_events.py
src/tests/_factories/: __init__.py  queue_tasks.py
src/tests/e2e/: __init__.py  assertions.py  conftest.py  health_check.py  server_manager.py  test_example_server.py  test_realtime_browser.py  test_realtime_topology.py
src/tests/integration/: _backends.py  _names.py  _uniqueness_contract.py  conftest.py  test_advanced_alchemy_backend.py  test_backends_registry.py  test_background.py  test_queue_contract.py  test_redis_valkey_backend.py  test_sqlspec_backend.py
src/tests/support/: __init__.py  cli_app.py  cli_app_missing_canary.py  queue_tasks.py
src/tests/unit/: conftest.py  test_cli.py  test_cli_run.py  test_config_structure.py  test_consolidated_worker_config.py  test_consumer.py  test_discover_tasks.py  test_dispatch_envelope.py  test_docs_structure.py  test_docs_theme.py  test_downstream_migration.py  test_heartbeat_manager.py  test_identity_benchmark.py  test_maintenance.py  test_maintenance_drift.py  (+17 more)
tools/: benchmark_bulk_enqueue.py  benchmark_identity.py  benchmark_queues.py  build_docs.py  dev_infra.py  docs_audit.py  no_future_annotations.py
tools/queue_bench/: __init__.py  __main__.py  child.py  environment.py  infra.py  models.py  report.py  runner.py  statistics.py
tools/sphinx_ext/: __init__.py  pygments_styles.py
(+196 files in other folders)
