
####################
# Project Metadata #
####################
[project]
authors = [{ name = "Cody Fincher", email = "cody@litestar.dev" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "litestar>=2.0.0",
  "typing_extensions>=4.0.0",
]
description = "Task queue plugin for Litestar"
keywords = ["litestar", "queue", "tasks", "workers", "background-jobs"]
license = { text = "MIT" }
name = "litestar-queues"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
Changelog = "https://github.com/litestar-org/litestar-queues/releases/"
Discord = "https://discord.gg/litestar-919193495116337154"
Documentation = "https://github.com/litestar-org/litestar-queues"
Homepage = "https://github.com/litestar-org/litestar-queues"
Issue = "https://github.com/litestar-org/litestar-queues/issues/"
Source = "https://github.com/litestar-org/litestar-queues"

[project.scripts]
litestar-queues-cloudrun-worker = "litestar_queues.execution.cloudrun.entrypoint:main"

[project.optional-dependencies]
advanced-alchemy = ["advanced-alchemy>=1.9.0"]
cloudrun = ["google-cloud-run>=0.10.0"]
redis = ["redis>=5.0.0"]
sqlspec = ["sqlspec>=0.46.0"]
valkey = ["valkey>=6.0.0"]

######################
# Build & Versioning #
######################
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
dev-mode-dirs = ["."]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/litestar_queues"]

[tool.hatch.metadata]
allow-direct-references = true

#####################
# Environment Setup #
#####################
[dependency-groups]
dev = [
  "litestar[standard,attrs,pydantic]",
  # - Linting
  "mypy",
  "ruff",
  "slotscheck",
  "pyright",
  # - Testing
  "anyio",
  "coverage[toml]",
  "pytest",
  "pytest-timeout",
  "pytest-cov",
  "pytest-mock",
  "pytest-sugar",
  "pytest-xdist",
  { include-group = "docs" },
]
docs = [
  "auto-pytabs[sphinx]>=0.4.0",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinx>=7.1.2",
  "sphinxcontrib-mermaid>=0.9.2",
  "sphinx-paramlinks>=0.6.0",
  "sphinx-togglebutton>=0.3.2",
  "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git@v3",
]
test-adapters = [
  # Real-service fixtures for the integration tier
  "pytest-databases[postgres,mysql,oracle,redis,valkey]>=0.16.0",
  # Redis + Valkey clients used directly by integration tests
  "redis>=5.0.0",
  "valkey>=6.0.0",
  # In-process / file-backed SQL adapters
  "aiosqlite>=0.20.0",
  "duckdb>=1.1.0",
  "adbc-driver-sqlite>=1.2.0",
  # Postgres async + sync drivers
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.0",
  "psqlpy>=0.10.0",
  # MySQL async + sync drivers
  "asyncmy>=0.2.0",
  "aiomysql>=0.2.0",
  "pymysql>=1.1.0",
  "mysql-connector-python>=9.0.0",
  # Oracle
  "oracledb>=2.5.0",
]

#####################
# Testing           #
#####################
[tool.pytest.ini_options]
addopts = "-ra -q"
filterwarnings = [
  "ignore:Call to deprecated function 'set_async_context'.*:DeprecationWarning:advanced_alchemy._listeners",
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:xdist.*",
  "ignore::DeprecationWarning:importlib._bootstrap",
]
testpaths = ["src/tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
disable_warnings = ["no-data-collected", "module-not-measured", "module-not-imported"]
omit = ["src/tests/*"]
parallel = true
source = ["src/litestar_queues"]

#####################
# Tools             #
#####################
[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__pycache__",
]
fix = true
include = ["src/litestar_queues/**/*.py", "src/litestar_queues/**/*.pyi", "src/tests/**/*.py", "src/tests/**/*.pyi"]
line-length = 120
lint.fixable = ["ALL"]
lint.ignore = [
  "B027",
  "FBT003",
  "S105",
  "S106",
  "S107",
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR6301",
  "PLC1901",
  "PLW2901",
  "SIM114",
  "E203",
  "ISC001",
  "E501",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D205",
  "D415",
  "UP037",
  "A003",
  "B010",
  "B008",
  "RUF012",
  "ANN401",
  "PLR2004",
  "FBT001",
  "FBT002",
  "ARG002",
  "ARG001",
  "TD002",
  "TD003",
  "FIX002",
  "PGH003",
  "RUF006",
  "RUF029",
  "SLF001",
  "PT007",
  "S603",
  "FBT",
  "PLC0415",
  "PT",
  "TD",
  "PERF203",
  "COM812",
  "PLR0917",
  "CPY001",
  "FA100",
  "PLC2701",
]
lint.select = ["ALL"]
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
preview = true
src = ["src/litestar_queues", "src/tests"]
target-version = "py310"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["litestar_queues", "tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104", "E402"]
"src/tests/**/*" = [
  "PLR2004",
  "S101",
  "TID252",
  "ERA001",
  "ANN201",
  "ANN001",
  "D103",
  "D104",
  "T201",
  "S404",
  "PLR6301",
  "FA102",
]
"tools/**/*" = [
  "S404",
  "S607",
  "S310",
  "BLE001",
  "DOC502",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.slotscheck]
strict-imports = false

[tool.mypy]
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = false
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["litestar_queues", "tests"]

[[tool.mypy.overrides]]
module = ["google.cloud.*"]
ignore_missing_imports = true

[tool.codespell]
skip = "uv.lock"

[tool.pyright]
pythonVersion = "3.10"
include = ["src/litestar_queues"]
typeCheckingMode = "standard"
reportOptionalMemberAccess = "warning"
reportAssignmentType = "warning"
