
####################
# Project Metadata #
####################
[project]
authors = [{ name = "Cody Fincher", email = "cody@litestar.dev" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = ["litestar>=2.24.0", "typing_extensions>=4.0.0"]
description = "Task queue plugin for Litestar"
keywords = ["litestar", "queue", "tasks", "workers", "background-jobs"]
license = { text = "MIT" }
name = "litestar-queues"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
Changelog = "https://github.com/litestar-org/litestar-queues/releases/"
Discord = "https://discord.gg/litestar-919193495116337154"
Documentation = "https://github.com/litestar-org/litestar-queues"
Homepage = "https://github.com/litestar-org/litestar-queues"
Issue = "https://github.com/litestar-org/litestar-queues/issues/"
Source = "https://github.com/litestar-org/litestar-queues"

[project.scripts]
litestar-queues-cloudrun-worker = "litestar_queues.execution.cloudrun.entrypoint:main"

[project.optional-dependencies]
advanced-alchemy = ["advanced-alchemy>=1.10.0"]
cloudrun = ["google-cloud-run>=0.10.0"]
redis = ["redis>=5.0.0"]
sqlspec = ["sqlspec>=0.51.0"]
valkey = ["valkey>=6.0.0"]

######################
# Build & Versioning #
######################
[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
dev-mode-dirs = ["."]
exclude = ["/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["src/litestar_queues"]

[tool.hatch.metadata]
allow-direct-references = true

#####################
# Environment Setup #
#####################
[dependency-groups]
dev = [
  "litestar[standard,attrs,pydantic]",
  # - Linting
  "mypy",
  "ruff",
  "slotscheck",
  "pyright",
  # - Testing
  "anyio",

  { include-group = "docs" },
  { include-group = "tests" },
]
docs = [
  "auto-pytabs[sphinx]>=0.4.0",
  "sphinx-autobuild>=2021.3.14",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.5.0",
  "sphinx>=7.1.2",
  "sphinxcontrib-mermaid>=0.9.2",
  "sphinx-paramlinks>=0.6.0",
  "sphinx-togglebutton>=0.3.2",
  "litestar-sphinx-theme @ git+https://github.com/litestar-org/litestar-sphinx-theme.git@v3",
]
tests = [
  "coverage[toml]",
  "pydantic>=2.0.0",
  "pytest",
  "pytest-timeout",
  "pytest-cov",
  "pytest-mock",
  "pytest-sugar",
  "pytest-xdist",
  # Real-service fixtures for the integration tier
  "pytest-databases[postgres,mysql,oracle,redis,valkey]>=0.16.0",
  # Redis + Valkey clients used directly by integration tests
  "redis>=5.0.0",
  "valkey>=6.0.0",
  "pyarrow",
  "numpy",
  "advanced-alchemy>=1.10.0",
  # SQLSpec adapters covered by the default integration matrix
  "sqlspec[aiosqlite,oracledb,aiomysql,psycopg,asyncpg,duckdb,psqlpy,asyncmy,litestar,mysql-connector]>=0.51.0",
]

#####################
# Testing           #
#####################
[tool.pytest.ini_options]
addopts = "-ra -q --dist loadgroup"
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:xdist.*",
  "ignore::DeprecationWarning:importlib._bootstrap",
]
testpaths = ["src/tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self\\.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
disable_warnings = ["no-data-collected", "module-not-measured", "module-not-imported"]
omit = ["src/tests/*"]
parallel = true
source = ["src/litestar_queues"]

#####################
# Tools             #
#####################
[tool.ruff]
exclude = [".venv", "node_modules", "tmp", ".tmp", ".bugs", "docs/_build"]
include = [
  "pyproject.toml",
  "src/litestar_queues/**/*.py",
  "src/litestar_queues/**/*.pyi",
  "src/tests/**/*.py",
  "src/tests/**/*.pyi",
  "docs/**/*.py",
  "tools/**/*.py",
]
line-length = 120
src = ["src/litestar_queues", "src/tests", "docs", "tools"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
explicit-preview-rules = true
extend-safe-fixes = ["TC"]
extend-select = ["ASYNC119", "DOC201", "DOC402"]
fixable = ["ALL"]
ignore = [
  "A003",
  "A005",
  "ANN401",
  "ARG001",
  "ARG002",
  "B010",
  "COM812",
  "CPY001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D202",
  "D205",
  "D415",
  "E501",
  "FA100",
  "FBT001",
  "FBT002",
  "FBT003",
  "FIX002",
  "ISC001",
  "PGH003",
  "PLC0415",
  "PLR0913",
  "PLW0717",
  "PLW2901",
  "RUF012",
  "RUF029",
  "TD002",
  "TD003",
  "UP037",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["litestar_queues", "tests"]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"docs/**/*.*" = ["A", "B", "D", "DTZ", "ERA", "RET", "S", "TC"]
"src/litestar_queues/_cli.py" = ["BLE001"]
"src/litestar_queues/backends/advanced_alchemy/mixins.py" = ["N805", "PLW3201"]
"src/litestar_queues/backends/sqlspec/backend.py" = ["BLE001"]
"src/litestar_queues/backends/sqlspec/stores/**/*.*" = ["SLF001"]
"src/litestar_queues/execution/cloudrun/backend.py" = ["BLE001"]
"src/litestar_queues/service.py" = ["BLE001"]
"src/tests/**/*" = [
  "ANN001",
  "ANN201",
  "C901",
  "D103",
  "D104",
  "ERA001",
  "FA102",
  "PLR2004",
  "PLR6301",
  "PT",
  "S",
  "S101",
  "S404",
  "SLF001",
  "T201",
  "TID252",
]
"tools/**/*.*" = ["BLE001", "D", "DOC502", "S310", "S404", "S603", "S607", "T201"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-bool-expr = 10
max-branches = 20
max-locals = 20
max-nested-blocks = 7
max-public-methods = 30
max-returns = 15

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "classmethod",
  "sqlalchemy.ext.declarative.declared_attr",
  "sqlalchemy.orm.declared_attr.directive",
  "sqlalchemy.orm.declared_attr",
]

[tool.slotscheck]
strict-imports = false

[tool.mypy]
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = false
mypy_path = "src"
packages = ["litestar_queues", "tests"]
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["google.cloud.*"]

[tool.codespell]
skip = "uv.lock"

[tool.pyright]
include = ["src/litestar_queues"]
pythonVersion = "3.10"
reportAssignmentType = "warning"
reportOptionalMemberAccess = "warning"
typeCheckingMode = "standard"
